ci: improve GitHub Actions workflow for version synchronization

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Versions
 
 on:
   workflow_dispatch:
@@ -32,6 +32,7 @@ jobs:
 
       - name: Update version aliases
         id: update_version_aliases
+        if: steps.sync_versions.outputs.new-tag-name != ''
         uses: pfaciana/version-alias@v1
         with:
           match-tag: ${{ steps.sync_versions.outputs.tag-name }}
